--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,4 +1,4 @@
-<div class="banner"></div>
+<div class="banner hidden-xs"></div>
 
 <div class="navbar navbar-default" ng-controller="HeaderCtrl as header">
   <div class="container">
@@ -33,7 +33,7 @@
             <li>
               <div class="navbar-login">
                 <div class="row">
-                  <div class="col-lg-4">
+                  <div class="col-lg-4 hidden-xs">
                     <p class="text-center">
                       <span class="glyphicon glyphicon-user icon-size"></span>
                     </p>
