--- a/app/views/about.html
+++ b/app/views/about.html
@@ -16,3 +16,11 @@ Testes
 
 <br>
 <relogio></relogio>
+
+<style>
+  .custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+</style>
+
+<input type="file" class="form-control custom-file-input">
