--- a/app/partials/dashboard/perfis.html
+++ b/app/partials/dashboard/perfis.html
@@ -4,18 +4,14 @@
     <h3>Perfis</h3>
   </div>
 </div>
-<div class="col-md-3">
+<div class="col-xs-6 col-sm-3 col-md-3">
   <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizarPerfis()"><span
     class="glyphicon glyphicon-refresh"></span> Atualizar
   </button>
 </div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
+<div class="col-xs-6 col-sm-3 col-sm-push-6 col-md-3">
   <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarPerfil()"><span
-    class="glyphicon glyphicon-plus"></span> Novo Perfil
+    class="glyphicon glyphicon-plus"></span> Novo Usuário
   </button>
 </div>
 <div class="col-md-12">
@@ -26,18 +22,31 @@
       <th>Data de Cadastro</th>
       <th>Última Atualização</th>
       <th>&nbsp;</th>
+      <th>&nbsp;</th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="perfil in configuracoes.perfis">
-      <td>{{perfil.nome}}</td>
-      <td>{{perfil.dataCadastro | date}}</td>
-      <td>{{perfil.dataUpdate | date}}</td>
-      <td><a href="" ng-click="configuracoes.editarPerfil(perfil)"><span
-        class="glyphicon glyphicon-pencil"></span></a></td>
+      <td data-label="Nome">{{perfil.nome}}</td>
+      <td data-label="Data de cadastro">{{perfil.dataCadastro | date}}</td>
+      <td data-label="Última atualização">{{perfil.dataUpdate | date}}</td>
+      <td class="hidden-xs">
+        <a href="" ng-click="configuracoes.editarPerfil(perfil)"><span
+        class="glyphicon glyphicon-pencil"></span></a>
+      </td>
+      <td class="hidden-xs">
+        <a href="" ng-click="configuracoes.excluirPerfil(perfil)"><span
+          class="glyphicon glyphicon-trash"></span></a>
+      </td>
+      <td class="visible-xs-block">
+        <button class="btn btn-default pull-right" ng-click="configuracoes.editarPerfil(perfil)"><span class="glyphicon glyphicon-pencil"></span> Editar</button>
+        <button class="btn btn-default pull-right" ng-click="configuracoes.excluirPerfil(perfil)"><span class="glyphicon glyphicon-trash"></span> Excluir</button>
+      </td>
+
     </tr>
-    <tr ng-if="configuracoes.usuarios.length < configuracoes.perfisPagination.max"
+    <tr class="hidden-xs" ng-if="configuracoes.usuarios.length < configuracoes.perfisPagination.max"
         ng-repeat="n in getNumber(configuracoes.perfisPagination.max - configuracoes.perfis.length < 0 ? 0 : configuracoes.perfisPagination.max - configuracoes.perfis.length) track by $index">
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
