--- a/app/partials/dashboard/usuarios.html
+++ b/app/partials/dashboard/usuarios.html
@@ -4,16 +4,12 @@
     <h3>Usuários</h3>
   </div>
 </div>
-<div class="col-md-3">
+<div class="col-xs-6 col-sm-3 col-md-3">
   <button class="btn btn-default botao-esticado" ng-click="configuracoes.atualizarUsuarios()"><span
     class="glyphicon glyphicon-refresh"></span> Atualizar
   </button>
 </div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
+<div class="col-xs-6 col-sm-3 col-sm-push-6 col-md-3">
   <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarUsuario()"><span
     class="glyphicon glyphicon-plus"></span> Novo Usuário
   </button>
@@ -31,16 +27,19 @@
     </tr>
     </thead>
     <tbody>
+
     <tr ng-repeat="usuario in configuracoes.usuarios">
-      <td>{{usuario.perfil.nome}}</td>
-      <td>{{usuario.nome}}</td>
-      <td>{{usuario.usuario}}</td>
-      <td>{{usuario.email}}</td>
-      <td>{{usuario.ultimoAcesso ? (usuario.ultimoAcesso | date) : 'Não disponível'}}</td>
-      <td><a href="" ng-click="configuracoes.editarUsuario(usuario)"><span
+      <td data-label="Perfil">{{usuario.perfil.nome}}</td>
+      <td data-label="Nome">{{usuario.nome}}</td>
+      <td data-label="Usuário">{{usuario.usuario}}</td>
+      <td data-label="Email">{{usuario.email}}</td>
+      <td data-label="Último Acesso">{{usuario.ultimoAcesso ? (usuario.ultimoAcesso | date) : 'Não disponível'}}</td>
+      <td class="hidden-xs"><a href="" ng-click="configuracoes.editarUsuario(usuario)"><span
         class="glyphicon glyphicon-pencil"></span></a></td>
+      <td class="visible-xs-block"><button class="btn btn-default pull-right" ng-click="configuracoes.editarUsuario(usuario)"><span
+        class="glyphicon glyphicon-pencil"></span> Editar</button></td>
     </tr>
-    <tr ng-if="configuracoes.usuarios.length < configuracoes.usuariosPagination.max"
+    <tr class="hidden-xs" ng-if="configuracoes.usuarios.length < configuracoes.usuariosPagination.max"
         ng-repeat="n in getNumber(configuracoes.usuariosPagination.max - configuracoes.usuarios.length < 0 ? 0 : configuracoes.usuariosPagination.max - configuracoes.usuarios.length) track by $index">
       <td>&nbsp;</td>
       <td>&nbsp;</td>
