--- a/app/partials/dashboard/perfis.html
+++ b/app/partials/dashboard/perfis.html
@@ -11,7 +11,7 @@
 </div>
 <div class="col-xs-6 col-sm-3 col-sm-push-6 col-md-3">
   <button class="btn btn-default botao-esticado" ng-click="configuracoes.adicionarPerfil()"><span
-    class="glyphicon glyphicon-plus"></span> Novo Usuário
+    class="glyphicon glyphicon-plus"></span> Novo Perfil
   </button>
 </div>
 <div class="col-md-12">
