--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -38,7 +38,7 @@
                       <span class="glyphicon glyphicon-user icon-size"></span>
                     </p>
                   </div>
-                  <div class="col-lg-8">
+                  <div class="col-xs-8 col-xs-offset-2 col-lg-8">
                     <p class="text-left"><strong>{{header.getCurrentUser().nome}}</strong></p>
                     <p class="text-left small">{{header.getCurrentUser().email}}</p>
                     <p class="text-center perfil">{{header.getCurrentUser().perfil}}</p>
@@ -53,7 +53,7 @@
             <li class="navbar-login-session-bg">
               <div class="navbar-login navbar-login-session">
                 <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-xs-8 col-xs-offset-2 col-lg-12">
                     <p>
                       <a href="#/logout" class="btn btn-danger btn-block">Logout</a>
                     </p>
