--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -18,8 +18,10 @@
     <div class="col-md-12">
       <div class="main-head" style="text-align: center">
         <h3><span class="glyphicon glyphicon-shopping-cart"></span>
-          {{orcamento.pedido.codigo ? ('Orçamento código ' + orcamento.pedido.codigo) : ''}}
-          {{orcamento.pedido.codigo ? ('criado em ' + (orcamento.pedido.dataPedido | date:'dd/MM/yyyy')) : ''}}
+          <span class="hidden-xs">{{orcamento.pedido.codigo ? ('Orçamento código ' + orcamento.pedido.codigo) : ''}}</span>
+          <span class="hidden-xs">{{orcamento.pedido.codigo ? ('criado em ' + (orcamento.pedido.dataPedido | date:'dd/MM/yyyy')) : ''}}</span>
+          <span class="visible-xs-inline">{{orcamento.pedido.codigo ? (orcamento.pedido.codigo) : ''}}</span>
+          <span class="visible-xs-inline">{{orcamento.pedido.codigo ? (orcamento.pedido.dataPedido | date:'dd/MM/yyyy') : ''}}</span>
           {{orcamento.pedido.codigo ? '' : 'Novo Orçamento'}}
         </h3>
         <!--<a href="" style="float: right; margin-top: -36px;font-size: 1.5em;margin-right: 10px" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span></a>-->
@@ -29,12 +31,12 @@
   </div>
 
   <!--VENDEDOR-->
-  <br>
+  <br class="hidden-xs">
   <div class="row card">
     <div id="form-vendedor" class="col-md-12" ng-init="formularios.vendedor = false" ng-click="formularios.vendedor = !formularios.vendedor; scrollTo($event);">
       <div class="head">
         <h3>Vendedor
-          <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo; ({{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}})</span>
+          <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo; ({{orcamento.pedido.vendedor.codigo}}) <span class="hidden-xs">- {{orcamento.pedido.vendedor.nome}}</span></span>
           <a href="" class="limpar" ng-click="orcamento.limparVendedor($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span></a>
@@ -61,12 +63,12 @@
   </div>
 
   <!--PRODUTOS-->
-  <br>
+  <br class="hidden-xs">
   <div class="row card">
     <div id="form-produtos" class="col-md-12" ng-init="formularios.produtos = true" ng-click="formularios.produtos = !formularios.produtos; scrollTo($event);">
       <div class="head">
         <h3>Produtos
-          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo; ({{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} - Total: {{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}})</span>
+          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo; {{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} <span class="hidden-xs">- Total: {{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}}</span></span>
           <a href="" class="limpar" ng-click="orcamento.limparProdutos($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span></a>
@@ -100,17 +102,17 @@
                  typeahead-on-select="orcamento.selectProduto($item)" required>
         </div>
       </div>
-      <div class="col-xs-4 col-xs-push-4 col-sm-3">
+      <div class="col-xs-4 col-xs-push-4 col-sm-3 col-sm-push-0">
         <div><h4>Valor unitário</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
           <input type="text" class="form-control" readonly="true" tabindex="-1" ng-value="item.produto.preco | currency: ''">
         </div>
       </div>
-      <div class="col-xs-4 col-xs-pull-4 col-sm-3">
+      <div class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-0">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input name="quantidade" type="text" class="form-control" currency number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" keys-shortcuts prevent-default="true" enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" uib-tooltip="Use Enter para adicionar" tooltip-append-to-body="true">
+          <input name="quantidade" type="text" class="form-control" currency symbol="" number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" keys-shortcuts prevent-default="true" enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" uib-tooltip="Use Enter para adicionar" tooltip-append-to-body="true">
           <span class="input-group-addon">{{item.produto.unidade || '(un)'}}</span>
         </div>
       </div>
@@ -138,7 +140,7 @@
     </div>
     <!--TABELA PRODUTOS-->
     <div class="col-md-12" uib-collapse="!formularios.produtos">
-      <div class="">
+      <div class="hidden-xs">
         <table id="tabela-orcamento" class="table">
           <thead>
             <tr>
@@ -170,12 +172,26 @@
           </tbody>
         </table>
       </div>
+      <div class="visible-xs-block" style="max-height: 300px;overflow-y: auto">
+        <table class="tabela tabela-bordered tabela-esticada">
+          <tbody>
+            <tr ng-repeat="i in orcamento.pedido.items">
+              <td data-label="código">{{i.produto.codigo}}</td>
+              <td data-label="descrição">{{i.produto.nome | limitTo: 35 }}</td>
+              <td data-label="unidade">{{i.produto.unidade}}</td>
+              <td data-label="quantidade">{{i.quantidade | currency: ''}}</td>
+              <td data-label="valor unitário">{{i.produto.preco | currency: 'R$ '}}</td>
+              <td data-label="total">{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
+              <td>
+                <button class="btn btn-default pull-right" tabindex="-1" ng-click="orcamento.removerItem(i)"><span class="glyphicon glyphicon-remove"></span> Remover</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <div class="col-md-12" uib-collapse="!formularios.produtos">
-      <div class="col-md-4">
-
-      </div>
-      <div class="col-md-8">
+      <div class="hidden-xs col-md-8 col-md-push-4">
         <div class="hidden-xs col-sm-4 col-md-4">
           <div><h4>Desconto %</h4></div>
           <div class="div-display">{{(orcamento.pedido.getDescontoPercentItens() | currency : "")  || "0,00"}}%</div>
@@ -184,21 +200,27 @@
           <div><h4>Desconto R$</h4></div>
           <div class="div-display">{{orcamento.pedido.getDescontoDinheiroItens() | currency : "R$ "}}</div>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
+        <div class=" col-sm-4 col-md-4">
           <div><h4>Total do pedido</h4></div>
           <div class="div-display">{{orcamento.pedido.getValorTotalSemDesconto() | currency : "R$ "}}</div>
         </div>
+      </div>
+      <div class="visible-xs-block col-xs-12">
+        <h4 class="pull-right">Total do Pedido</h4>
+      </div>
+      <div class="visible-xs-block col-xs-12">
+        <h3 class="pull-right" style="margin: 0">{{orcamento.pedido.getValorTotalSemDesconto() | currency : "R$ "}}</h3>
       </div>
     </div>
   </div>
 
   <!--CLIENTE-->
-  <br>
+  <br class="hidden-xs">
   <div class="row card">
     <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true" ng-click="formularios.cliente = !formularios.cliente; scrollTo($event);">
       <div class="head">
         <h3>Cliente
-          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
+          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}}) <span class="hidden-xs">- {{orcamento.pedido.cliente.nome}})</span></span>
           <a href="" class="limpar" ng-click="orcamento.limparCliente($event)" uib-tooltip="Limpar campos" tooltip-append-to-body="true"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
